<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EvaluateGestureActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/cameraPreview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/detectedGestureTextView"
        app:layout_constraintVertical_weight="0.7" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/switchCameraButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@android:drawable/ic_popup_sync"
        android:contentDescription="Alternar cámara"
        app:layout_constraintTop_toTopOf="@id/cameraPreview"
        app:layout_constraintEnd_toEndOf="@id/cameraPreview" />

    <TextView
        android:id="@+id/detectedGestureTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detected_gesture"
        android:textSize="24sp"
        android:textAlignment="center"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@id/buttonsLayout" />

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/startEvaluationButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start_evaluation"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/resetDetectionButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset_detection"
            android:enabled="false"
            android:layout_marginStart="8dp" />
            
    </LinearLayout>

    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:padding="8dp"
        android:background="#80000000"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toTopOf="@id/cameraPreview"
        app:layout_constraintStart_toStartOf="@id/cameraPreview"
        android:layout_margin="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout> 